--- a/templates/output.html
+++ b/templates/output.html
@@ -12,14 +12,13 @@
         <p><strong>Width:</strong> {{ width }} {{ 'cm' if units == 'metric' else 'in' }}</p>
         <p><strong>Color:</strong> {{ color }}</p>
         <p><strong>Material:</strong> {{ material }}</p>
-        <p><strong>Wind:</strong> {{ beaufort }} Beaufort ({{ beaufort_to_kph[beaufort][0] }}-{{ beaufort_to_kph[beaufort][1] }} kph)</p>
         <h3>Template</h3>
         <img src="/{{ svg_file }}" class="img-fluid" alt="Template" style="max-width: 500px;">
         <h3>Download</h3>
         <a href="/{{ svg_file }}" class="btn btn-primary" download>Download SVG</a>
         <a href="/{{ pdf_file }}" class="btn btn-primary" download>Download PDF</a>
         <h3>Instructions</h3>
-        <p>Cut {{ form_type }} to {{ length }} {{ 'cm' if units == 'metric' else 'in' }} x {{ width }} {{ 'cm' if units == 'metric' else 'in' }} using {{ material }}. Sew with 0.5 {{ 'cm' if units == 'metric' else 'in' }} seam allowance. Suitable for {{ beaufort }} Beaufort wind.</p>
+        <p>Cut {{ form_type }} to {{ length }} {{ 'cm' if units == 'metric' else 'in' }} x {{ width }} {{ 'cm' if units == 'metric' else 'in' }} using {{ material }}. Sew with 0.5 {{ 'cm' if units == 'metric' else 'in' }} seam allowance.</p>
         <h3>Tools Needed</h3>
         <ul>
             {% for category, items in tools.items() %}
