--- a/templates/upload.html
+++ b/templates/upload.html
@@ -15,7 +15,7 @@
         <p class="text-success">{{ message }}</p>
         {% endif %}
         <form action="/upload" method="post" enctype="multipart/form-data">
-            <div class="mb-3">
+            <div class="form-group">
                 <label for="yaml_file" class="form-label">Select YAML File</label>
                 <input type="file" class="form-control" id="yaml_file" name="yaml_file" accept=".yaml,.yml" required>
             </div>
